# ProjetoPesquisa

.github/workflows/: static.yml
fases/implementacao/PubSubHiredis/teste/: installing_compile_project.sh
fases/implementacao/PubSubHiredis/teste/system_rtt_test/: common.c  common.h
fases/implementacao/PubSubHiredis/teste/system_rtt_test/connect_test/: CMakeLists.txt  connect.c  run_project.sh
fases/implementacao/PubSubHiredis/teste/system_rtt_test/quic/: CMakeLists.txt  pub.c  sub.c  sub_2.c
fases/implementacao/PubSubHiredis/teste/system_rtt_test/tcp/: CMakeLists.txt  backup.c  pub.c  sub_tcp.c
fases/implementacao/PubSubHiredis/teste/system_rtt_test/tls/: CMakeLists.txt  backup_tls.c  pub.c  sub_tls.c  tls.c
fases/resultados/ResultadosTesteDesempenho/: img_conn.py
fases/resultados/ResultadosTesteDesempenho/comparacao_100ms_1k_pacotes/: gerador-unificado.py
